--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</ul>
 	</nav>
 </div>
-	<main id="home">
+  <main>
         <section class="flexable">
           <div class="my-contant style">
         <h2 class="heading">Hi I'm Al Saef <span>Ratul</span> </h2>
@@ -33,7 +33,7 @@
           <div class="my-contant">
           <img src="bg src/ratul bg.png" alt="">
           </div>
-        </section>
+        </section> <br>
         <section  class="flexable">
         <div class="my-contant ">
         <img src="bg src/my-bg2 (3).png" alt="">
@@ -43,7 +43,7 @@
          <p>Hi I'm Abdulla Al Mamun My home is Raipur Narsingdi. I studied in Raipura Govt College</p>
          <a target="_blank" href="https://www.facebook.com/profile.php?id=100017012255471">My Facebook <i class="fa-brands fa-facebook"></i></a>
         </div>
-        </section>
+        </section> <br> <br>
         <section id="about"  class="about">
         <div class="about-flex">
             <div class="Contact-us">
@@ -59,13 +59,14 @@
      <h1>Our About</h1>
      <p>Mamun and I studied together for 10 years and are still good friends</p>
     </section> <br> 
-    <div class="border"></div> 
-	</main> <br>
+    <h1>Updating..</h1><i class="fa-solid fa-timer"></i>
     <footer id="footer">
-        <h3>Our Friendship </h3>
-        <a target="_blank" href="https://www.facebook.com/profile.php?id=100064069724626"><i class="fa-brands fa-facebook"></i></a>_
-        <a target="_blank" href="https://www.instagram.com/as_ratul_/?fbclid=IwAR3YZt-m-XQOss-mokv0lskS1kDYxHjm0cYhZIP8g_SbnADCvz20L2AdYsc"> <i class="fa-brands fa-instagram"></i></a>
-        <h2>Develop By A S Ratul</h2>
+      <h3>Our Friendship</h3>
+      <a target="_blank" href="https://www.facebook.com/profile.php?id=100064069724626"><i class="fa-brands fa-facebook"></i></a>_
+      <a target="_blank" href="https://www.instagram.com/as_ratul_/?fbclid=IwAR3YZt-m-XQOss-mokv0lskS1kDYxHjm0cYhZIP8g_SbnADCvz20L2AdYsc"> <i class="fa-brands fa-instagram"></i></a>
+      <h2>Develop By A S Ratul</h2>
     </footer>
+</main>
+
 </body>
 </html>
